# server/api/api.yaml
@@ -1455,12 +1455,12 @@ paths:
                   description: Boolean that indicates whether the incident creation will be announced in the channel declared in announcement_channel_id.
                   type: boolean
                   example: true
-                creation_webhook_url:
+                webhook_on_creation_url:
                   description: An absolute URL where a POST request will be sent as soon as the incident is created. The allowed protocols are HTTP and HTTPS.
                   type: string
                   example: https://httpbin.org/post
-                creation_webhook_enabled:
-                  description: Boolean that indicates whether the webhook declared in creation_webhook_url will be automatically sent.
+                webhook_on_creation_enabled:
+                  description: Boolean that indicates whether the webhook declared in webhook_on_creation_url will be automatically sent.
                   type: boolean
                   example: true
       x-codeSamples:
@@ -1471,17 +1471,17 @@ paths:
             -d '{"title": "Cloud Incidents", "description": "A playbook to follow when there is an incident regarding the availability of the cloud service.", "team_id": "p03rbi6viyztysbqnkvcqyel2i","create_public_incident": true,"checklists": [{"title": "Triage issue","items": [{"title": "Gather information from customer."}]}]}'
       callbacks:
         incidentCreation:
-          "{$request.body#/creation_webhook_url}":
+          "{$request.body#/webhook_on_creation_url}":
             post:
               summary: Incident's creation outgoing webhook.
-              description: When an incident is created with this playbook, a POST request is sent to the URL configured in creation_webhook_url. The webhook is considered successful if your server returns a response code within the 200-299 range. Otherwise, the webhook is considered failed, and a warning message is posted in the incident's channel. No retries are made.
-              operationId: creationWebhook
+              description: When an incident is created with this playbook, a POST request is sent to the URL configured in webhook_on_creation_url. The webhook is considered successful if your server returns a response code within the 200-299 range. Otherwise, the webhook is considered failed, and a warning message is posted in the incident's channel. No retries are made.
+              operationId: webhookOncreation
               requestBody:
                 required: true
                 content:
                   application/json:
                     schema:
-                      $ref: "#/components/schemas/CreationWebhookPayload"
+                      $ref: "#/components/schemas/WebhookOnCreationPayload"
               responses:
                 "2XX":
                   description: Your server returns a 2XX code if it successfully received the request.
@@ -1935,7 +1935,7 @@ components:
           type: string
           description: Further details on where and why this error happened.
           example: Specific details about the error, depending on the case.
-    CreationWebhookPayload:
+    WebhookOnCreationPayload:
       allOf:
         - $ref: "#/components/schemas/Incident"
         - type: object
