# server/incident/incident.go
@@ -50,7 +50,7 @@ type Incident struct {
 	TimelineEvents          []TimelineEvent      `json:"timeline_events"`
 	DefaultCommanderID      string               `json:"default_commander_id"`
 	AnnouncementChannelID   string               `json:"announcement_channel_id"`
-	CreationWebhookURL      string               `json:"creation_webhook_url"`
+	WebhookOnCreationURL    string               `json:"webhook_on_creation_url"`
 }
 
 func (i *Incident) Clone() *Incident {
