# server/sqlstore/incident.go
@@ -52,7 +52,7 @@ func NewIncidentStore(pluginAPI PluginAPIClient, log bot.Logger, sqlStore *SQLSt
 			"i.CreateAt", "i.EndAt", "i.DeleteAt", "i.PostID", "i.PlaybookID", "i.ReporterUserID", "i.CurrentStatus",
 			"i.ChecklistsJSON", "COALESCE(i.ReminderPostID, '') ReminderPostID", "i.PreviousReminder", "i.BroadcastChannelID",
 			"COALESCE(ReminderMessageTemplate, '') ReminderMessageTemplate", "ConcatenatedInvitedUserIDs", "DefaultCommanderID",
-			"AnnouncementChannelID", "CreationWebhookURL").
+			"AnnouncementChannelID", "WebhookOnCreationURL").
 		From("IR_Incident AS i").
 		Join("Channels AS c ON (c.Id = i.ChannelId)")
 
@@ -250,7 +250,7 @@ func (s *incidentStore) CreateIncident(newIncident *incident.Incident) (out *inc
 			"ConcatenatedInvitedUserIDs": rawIncident.ConcatenatedInvitedUserIDs,
 			"DefaultCommanderID":         rawIncident.DefaultCommanderID,
 			"AnnouncementChannelID":      rawIncident.AnnouncementChannelID,
-			"CreationWebhookURL":         rawIncident.CreationWebhookURL,
+			"WebhookOnCreationURL":       rawIncident.WebhookOnCreationURL,
 			// Preserved for backwards compatibility with v1.2
 			"ActiveStage":      0,
 			"ActiveStageTitle": "",
@@ -294,7 +294,7 @@ func (s *incidentStore) UpdateIncident(newIncident *incident.Incident) error {
 			"ConcatenatedInvitedUserIDs": rawIncident.ConcatenatedInvitedUserIDs,
 			"DefaultCommanderID":         rawIncident.DefaultCommanderID,
 			"AnnouncementChannelID":      rawIncident.AnnouncementChannelID,
-			"CreationWebhookURL":         rawIncident.CreationWebhookURL,
+			"WebhookOnCreationURL":       rawIncident.WebhookOnCreationURL,
 		}).
 		Where(sq.Eq{"ID": rawIncident.ID}))
 
